[gd_scene load_steps=3 format=3 uid="uid://c1y0a30vu8lg5"]

[ext_resource type="Script" path="res://Scripts/inventory.gd" id="1_jwitv"]
[ext_resource type="Resource" uid="uid://e7t5loyvmktn" path="res://Resources/Items/circuit.tres" id="3_ha2l6"]

[node name="inventory" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_jwitv")
needed_item = ExtResource("3_ha2l6")

[node name="Panel conteiner" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel conteiner"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel conteiner/VBoxContainer"]
layout_mode = 2

[node name="Bar" type="MarginContainer" parent="Panel conteiner/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxConteiner" type="HBoxContainer" parent="Panel conteiner/VBoxContainer/PanelContainer/Bar"]
layout_mode = 2
alignment = 2

[node name="Button" type="Button" parent="Panel conteiner/VBoxContainer/PanelContainer/Bar/VBoxConteiner"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
text = "x"

[node name="MarginContainer" type="MarginContainer" parent="Panel conteiner/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel conteiner/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Choose an item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemGrid" type="MarginContainer" parent="Panel conteiner/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="Panel conteiner/VBoxContainer/ItemGrid"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 8

[node name="MarginContainer2" type="MarginContainer" parent="Panel conteiner/VBoxContainer"]
layout_mode = 2

[node name="Submit_Button" type="Button" parent="Panel conteiner/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Submit"

[node name="ErrorLabel" type="Label" parent="Panel conteiner/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 30
text = "Please choose an item"
horizontal_alignment = 1

[connection signal="pressed" from="Panel conteiner/VBoxContainer/PanelContainer/Bar/VBoxConteiner/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel conteiner/VBoxContainer/Submit_Button" to="." method="_on_submit_button_pressed"]
